benchmark-results/7/merge/cseq/concurrentwitness2test.2024-11-08_13-30-27.logfiles/SV-COMP23_unreach-call.cseq-mix001.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix001.opt.yml/mix001.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix001.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_9malbe4a/tmp/tmp02c4fx0w.c
Compilation started
/tmp/BenchExec_run_9malbe4a/tmp/tmp02c4fx0w.c: In function ‘P1’:
/tmp/BenchExec_run_9malbe4a/tmp/tmp02c4fx0w.c:598:19: error: ‘FALSE’ undeclared (first use in this function)
  598 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_9malbe4a/tmp/tmp02c4fx0w.c:598:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_9malbe4a/tmp/tmp02c4fx0w.c: In function ‘P2’:
/tmp/BenchExec_run_9malbe4a/tmp/tmp02c4fx0w.c:638:19: error: ‘FALSE’ undeclared (first use in this function)
  638 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_9malbe4a/tmp/tmp02c4fx0w.c:639:19: error: ‘TRUE’ undeclared (first use in this function)
  639 |   weak$$choice2 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
